[package]
name = "rurune"
version = "0.1.0"
authors = ["Linden Chiu <hchiu87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.2.0"
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"
askama = "0.9.0"
juniper = "0.14.2"
listenfd = "0.3"
tensorflow = "0.15.0"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.52"
